<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="humaxdigital.joycast.unitapp.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#ffffff"
        android:visibility="gone"
        android:id="@+id/enterance"
        tools:layout_width="match_parent"
        tools:layout_height="match_parent">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:textColor="#ffffff"
            android:textSize="70sp"
            android:textStyle="bold"
            android:src="@drawable/joycast_logo"
            android:id="@+id/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/subtitle"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:text="@string/loading_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/unit_test_layout"
        android:visibility="visible"
        android:orientation="vertical"
        tools:layout_width="match_parent"
        tools:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/dial"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/unit_category"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/discover"
                    android:textAllCaps="false"
                    android:id="@+id/discover"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/launch_joycast"
                    android:enabled="false"
                    android:id="@+id/launch_joycast"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:text="@string/stop_joycast"
                    android:id="@+id/stop_joycast"/>
            </TableRow>
            <TableRow>
                <Button
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:enabled="false"
                    android:text="@string/launch_youtube"
                    android:id="@+id/launch_youtube"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:text="@string/stop_youtube"
                    android:id="@+id/stop_youtube"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/launch_result"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/session"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/unit_category"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:enabled="false"
                android:text="@string/connect"
                android:id="@+id/connect_relay"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/connect_custom"
                android:id="@+id/connect_custom_relay"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="Health\nCheck"
                android:id="@+id/health_check"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/connecting_progress"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@anim/loadingbar"/>
            </LinearLayout>
            <TextView
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/connection_status"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/cast"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/unit_category"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cast_controller">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play_source_1"
                    android:textAllCaps="false"
                    android:id="@+id/play_source_1"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/play_source_2"
                    android:id="@+id/play_source_2"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play_source_3"
                    android:textAllCaps="false"
                    android:id="@+id/play_source_3"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/play_source_custom"
                    android:id="@+id/play_source_custom"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play"
                    android:textAllCaps="false"
                    android:id="@+id/play"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/pause"
                    android:id="@+id/pause"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/stop"
                    android:textAllCaps="false"
                    android:id="@+id/stop"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/mute"
                    android:id="@+id/mute"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play_faster"
                    android:textAllCaps="false"
                    android:id="@+id/play_faster"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/play_slower"
                    android:id="@+id/play_slower"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/photo"
                    android:textAllCaps="false"
                    android:id="@+id/photo"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/unmute"
                    android:id="@+id/unmute"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/seek_minus_5"
                    android:textAllCaps="false"
                    android:id="@+id/seek_minus_5"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/seek_plus_5"
                    android:id="@+id/seek_plus_5"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/volume_up"
                    android:textAllCaps="false"
                    android:id="@+id/volume_up"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/volume_down"
                    android:id="@+id/volume_down"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/display_320_240"
                    android:textAllCaps="false"
                    android:id="@+id/display_320_240"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/display_720_480"
                    android:id="@+id/display_720_480"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/display_fullscreen"
                    android:id="@+id/display_fullscreen"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:text="@string/custom_message"
                    android:id="@+id/custom_message"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="00:00:00"
                    android:id="@+id/current_position"/>
                <SeekBar
                    android:layout_weight="8"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/playbar"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="00:00:00"
                    android:id="@+id/current_duration"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rcu"
                    android:textAllCaps="false"
                    android:id="@+id/rcu"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
